[package]
name = "math-engine"
version = "0.1.0"
edition = "2021"
description = "A mathematical representation for describing mathematical operations and functions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexgen = "0.14.0"
lexgen_util = "0.14.0"
pomelo = "0.1.5"
